@@ -33,8 +33,8 @@ subprojects {
     }
 
     compileJava {
-        targetCompatibility = JavaVersion.VERSION_14
-        sourceCompatibility = JavaVersion.VERSION_14
+        targetCompatibility = JavaVersion.VERSION_15
+        sourceCompatibility = JavaVersion.VERSION_15
     }
 
     jar {
@@ -46,13 +46,4 @@ subprojects {
         into "$buildDir/dependLibs"
     }
 
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += "--enable-preview"
-    }
-    tasks.withType(Test) {
-        jvmArgs += "--enable-preview"
-    }
-    tasks.withType(JavaExec) {
-        jvmArgs += "--enable-preview"
-    }
 }
